# python-rust-reprod

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
hello-rs/: Cargo.toml
hello-rs/src/: lib.rs
python_rust/: __main__.py
