[tool.black]
line-length = 79
target-version = ['py37']

[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[tool.cibuildwheel]
before-all = "which cargo"
build = "cp*"
environment = "PATH=$PATH:/root/.cargo/bin"
manylinux-x86_64-image = "eqseqs/cibuildwheel-rust"
skip = ["*musllinux*", "*i686"]
